Update index.html styles

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Newstap</title>
     <link href="https://fonts.googleapis.com/css?family=Fanwood+Text|Quattrocento" rel="stylesheet">
-  </head>
-  <body>
     <style>
       body {
-        background: ivory;
+        background: #FFF;
       }
 
       header {
@@ -18,7 +16,7 @@
 
       h1 {
         color: #333;
-        font-family: 'Quattrocento', serif;
+        font-family: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
         font-size: 2em;
         min-height: 85px;
         margin: 20% 0 0;
@@ -30,9 +28,11 @@
         text-align: center;
       }
     </style>
+  </head>
+  <body>
 
     <header>
-      <h1>NEWSTAP</h1>
+      <h1>NewsTap</h1>
     </header>
 
     <p>
